--- a/src/app/book/book-detail/book-detail.component.html
+++ b/src/app/book/book-detail/book-detail.component.html
@@ -13,7 +13,7 @@
     <div class="col">
       <dl>
         <dt>Authors</dt>
-        <dd *ngFor="let author of bookDetail.authors" class="caption">
+        <dd class="caption" *ngFor="let author of bookDetail.authors">
         {{ author.name }}
         </dd>
         <dt>ISBN</dt>
